Окончание вертски внутренней

--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,13 @@ i{
 	font-style: normal;
 }
 
+
 /*.clearfix*/
+
+.clearfix{
+	zoom: 1;
+}
+
 .clearfix:after,
 .clearfix:before{
 	display: table;
