--- a/js/slick/slick-theme.css
+++ b/js/slick/slick-theme.css
@@ -44,8 +44,8 @@
     background: rgba( 0, 0, 0, 0.4 );
 }
 
-.slick-prev,
-.slick-next
+.b-top-slider__list .slick-prev,
+.b-top-slider__list .slick-next
 {
     position: relative;
     font-size: 0;
@@ -92,6 +92,20 @@
     color: #fff;
 }
 
+.slick-prev,
+.slick-next{
+    z-index: 20;
+}
+
+.slick-prev
+{
+    left: 3%;
+}
+
+.slick-next
+{
+    right: 3%;
+}
 /*end .b-top-slider__list*/
 
 /*.b-services*/
@@ -171,10 +185,12 @@
 
 /*end .b-services*/
 
+/*
 .slick-prev
 {
     left: -25px;
 }
+*/
 [dir='rtl'] .slick-prev
 {
     right: -25px;
@@ -195,10 +211,12 @@
     content: "\f104";
 }
 
+/*
 .slick-next
 {
     right: -25px;
 }
+*/
 [dir='rtl'] .slick-next
 {
     right: auto;
@@ -221,6 +239,25 @@
 {
     margin-bottom: 30px;
 }
+
+/*.b-top-slider*/
+.b-top-slider .slick-dots{
+    position: absolute;
+    bottom: 7%;
+    
+    display: block;
+
+    width: 100%;
+    height: 1em;
+    padding: 0;
+    margin: 0;
+
+    list-style: none;
+
+    text-align: center;
+    z-index: 10;
+}
+/*end .b-top-slider*/
 
 .slick-dots
 {
@@ -284,9 +321,9 @@
 
 .b-top-slider .slick-dots li button:before
 {
-    font-family: 'slick';
-    font-size: 10px;
-    line-height: 14px;
+    font-family: "FontAwesome";
+    font-size: 32px;
+    line-height: 10px;
 
     position: absolute;
     top: 0;
@@ -322,9 +359,9 @@
 .b-slider-brend .slick-dots li button:before,
 .b-services .slick-dots li button:before
 {
-    font-family: 'slick';
-    font-size: 10px;
-    line-height: 14px;
+    font-family: 'FontAwesome';
+    font-size: 32px;
+    line-height: 10px;
 
     position: absolute;
     top: 0;
