--- a/css/main.css
+++ b/css/main.css
@@ -191,7 +191,18 @@ i{
 			.b-top-menu__item{
 				float: left;
 				position: relative;
+                text-transform: uppercase;
+				color: #1D2029;
+                font-weight: 700;
 			}
+                    .b-top-menu__item:hover{
+                        color: #e65100;
+                    }
+                    .b-top-menu__item_child:after{
+						font-family: "FontAwesome";
+						margin: 0 0 0 3px;
+						content: "\f107";
+					}
 
 				.b-top-menu__link{
 					text-decoration: none;
@@ -203,12 +214,6 @@ i{
 				    text-transform: uppercase;
 				    color: #1D2029;
 				}
-
-					.b-top-menu__link:after{
-						font-family: "FontAwesome";
-						margin: 0 0 0 3px;
-						content: "\f107";
-					}
 
 					.b-top-menu__link:hover{
 						color: #e65100;
@@ -227,6 +232,7 @@ i{
 				
 				.b-sub-top-menu__item{
 					border-right: 1px solid #FF8A39;
+                    color: #fff;
 				}
 
 					.b-sub-top-menu__item:hover,
@@ -248,7 +254,7 @@ i{
 							border-bottom: 1px solid #FF8A39;
 						}
 
-					.b-sub-top-menu__item:hover .b-sub-top-menu__list_child{
+					.b-sub-top-menu__item:hover ul{
 						display: block;
 						left: 0;
 						top: 0;
@@ -294,6 +300,62 @@ i{
 					.b-top-search__button:hover:after{
 						color: #E65100;
 					}
+.b-search{
+    display: none;
+    background: #e0e7ec;
+    padding: 13px 0;
+}
+    .b-search__input_text,
+    .b-search__input_sub,
+    .b-search__close{
+        float: left;
+    }
+    .b-search__input_text,
+    .b-search__input_sub{
+        border: none;
+        border-radius: 5px;
+        height: 34px;
+        line-height: 18px;
+        padding: 0 1%;
+    }
+    .b-search__input_text{
+        width: 80%;
+        margin: 0 1% 0 0;
+        color: #444444;
+    }
+        .b-search__input_text::-webkit-input-placeholder,
+        .b-search__input_text::-moz-placeholder,          
+        .b-search__input_text:-moz-placeholder,           
+        .b-search__input_text:-ms-input-placeholder,
+        .b-search__input_text:placeholder{
+            color: #444444;
+        }
+    .b-search__input_sub{
+        width: 10%;
+        margin: 0 2% 0 0;
+        background: #ff6410;
+        color: #fff;
+        text-align: center;
+        font-weight: 700;
+    }
+    .b-search__close{
+        text-decoration: none;
+        color: #c2cbd2;
+    }
+.b-search__close:hover{
+    color: #ff6410;
+}
+        .b-search__close:before{
+            top: 6px;
+            position: absolute;
+            display: block;
+            font-family: 'FontAwesome';
+            width: 16px;
+            height: 16px;
+            content: "\f00d";
+            font-size: 2em;
+        }
+
 /*end search*/
 
 /*end .b-header*/
