Программирование меню и не правильная работа верстки меню на странице contacts.html

--- a/css/contact.css
+++ b/css/contact.css
@@ -132,9 +132,14 @@
 	    margin: 2% 0;
 	}
 
+
 	.l-form__right textarea{
 		min-height: 229px;
 	}
+        .l-form__right_err{
+            border-color: #c00 !important;
+            background: #FADDD9;
+        }
 	
 	.b-form__marker{ 
 		position: absolute;
